<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.evaluacion_m4.LoginPage">

    <TextView
        android:id="@+id/logealogin"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:lines="2"
        android:orientation="vertical"
        android:text="@string/logea_y_empieza_a_transferir"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Emaillogea"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:ems="10"
        android:hint="@string/ingresa_tu_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/logealogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logealogin"
        app:layout_constraintTop_toBottomOf="@id/logealogin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/emailSingUpPage"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="225dp" />

    <EditText
        android:id="@+id/etcontraseña"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginBottom="275dp"
        android:ems="10"
        android:hint="@string/ingresa_tu_contrase_a"
        android:inputType="text|textEmailAddress|textCapCharacters|textCapSentences|textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvcontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="@string/contrasenyaSingUpPage"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="362dp" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="339dp"
        android:layout_height="70dp"
        android:background="@drawable/boton_redondo"
        android:text="Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/tvcrearcuentanueva"
        android:layout_width="328dp"
        android:layout_height="68dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/crea_una_cuenta_nueva"
        android:textColor="@color/celesteM4"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <TextView
        android:id="@+id/tvolvidaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:text="@string/olvidateTuConLoginPage"
        android:textColor="@color/celesteM4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibcandado"
        android:layout_width="50dp"
        android:layout_height="39dp"
        android:scaleType="fitCenter"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@mipmap/candado" />


</androidx.constraintlayout.widget.ConstraintLayout>